crates/rargc/tests/snapshots/test_scripts__impl-14.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] minus-v.sh --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Example that replaces the default behavior of -v and -h

[4mUsage:[0m
  minus-v [OPTIONS]
  minus-v --help
  minus-v --version

[4mExamples:[0m
  minus-v -h|--host localhost
    Set host
  minus-v -v|--verbose
    Set verbose mode on

[4mOptions:[0m
  -h --host [<HOST>]
    Show verbose output
  -v --verbose
    Show verbose output
  --help
    Print help
  --version
    Pring version

