crates/rargc/tests/snapshots/test_scripts__impl-143.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stderr] catch-all-stdin.sh --format toml"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mInvalid option for [33mformat[31m: [33mtoml[31m[0m

Catch All with stdin input

[4mUsage:[0m
  catch-all-stdin [OPTIONS] ...[FILE]
  catch-all-stdin -h|--help
  catch-all-stdin -v|--version

[4mExamples:[0m
  catch-all-stdin file1 file2 --format csv
    Read two csv files
  catch-all-stdin --format json file1 file2
    Read two json files
  catch-all-stdin -f csv < file1
    Read a file from stdin
  catch-all-stdin -f csv - < file1
    Read a file from stdin using -

[4mArguments:[0m
  FILE
    Path to one or more files. Reads from stdin if empty or -

[4mOptions:[0m
  -f --format [<FORMAT>]
    Specify the file format
    [@default json, @choices json, csv]
  -h --help
    Print help
  -v --version
    Pring version

